src/test/ui/generic-associated-types/method-unsatified-assoc-type-predicate.stderr
error[E0599]: the method `f` exists for struct `S`, but its trait bounds were not satisfied
  --> $DIR/method-unsatified-assoc-type-predicate.rs:27:7
   |
LL | struct S;
   | ---------
   | |
   | method `f` not found for this
   | doesn't satisfy `<S as X>::Y<i32> = i32`
   | doesn't satisfy `S: M`
...
LL |     a.f();
   |       ^ method cannot be called on `S` due to unsatisfied trait bounds
   |
note: the following trait bounds were not satisfied because of the requirements of the implementation of `M` for `_`:
      `<S as X>::Y<i32> = i32`
  --> $DIR/method-unsatified-assoc-type-predicate.rs:14:26
   |
LL | impl<T: X<Y<i32> = i32>> M for T {}
   |                          ^     ^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0599`.
